Fix missing # in .ui-input color

--- a/demo/stylesheet.css
+++ b/demo/stylesheet.css
@@ -32,7 +32,7 @@
     background-color: #ECEFF3;
     border: none;
     font-family: 'Roboto', sans-serif;
-    color: 212121;
+    color: #212121;
     padding-top: 2%;
 }
 
