--- a/demo/stylesheet.css
+++ b/demo/stylesheet.css
@@ -24,6 +24,7 @@
     font-size: 12px;
     color: #9CABBA;
     font-family: 'Roboto', sans-serif;
+    padding: 2%;
 }
 
 /*Style the input boxes*/
@@ -33,7 +34,8 @@
     border: none;
     font-family: 'Roboto', sans-serif;
     color: #212121;
-    padding-top: 2%;
+    padding-top: 4%;
+    padding-left: 2%;
 }
 
 /*Add focus transition for input boxes*/
