Padding adjustments.  Alphabetize CSS.

--- a/demo/stylesheet.css
+++ b/demo/stylesheet.css
@@ -2,66 +2,78 @@
     box-sizing: border-box;
 }
 
+
 /*import Roboto Font*/
+
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 /*Input Container*/
+
 .ui-input-container {
+    background-color: #ECEFF3;
     display: flex;
     flex-flow: row nowrap;
-    width: 150px;
-    max-width: 100%;
     height: 50px;
+    max-width: 100%;
     position: relative;
-    background-color: #ECEFF3;
+    width: 150px;
 }
+
 
 /*Descriptions: ex: "Phone Number (US)*/
+
 .ui-input-description {
-    position: absolute;
-    top: 1%;
-    left: 1%;
-    font-size: 12px;
     color: #9CABBA;
     font-family: 'Roboto', sans-serif;
+    font-size: 12px;
     padding: 2%;
+    position: absolute;
 }
+
 
 /*Style the input boxes*/
+
 .ui-input {
-    width: 100%;
     background-color: #ECEFF3;
     border: none;
-    font-family: 'Roboto', sans-serif;
     color: #212121;
-    padding-top: 4%;
-    padding-left: 2%;
+    font-family: 'Roboto', sans-serif;
+    padding: 6% 2% 2% 2%;
+    width: 100%;
 }
 
+
 /*Add focus transition for input boxes*/
+
 .ui-input:focus {
     border: 2px solid #51D0EF;
     transition: .8s ease-in;
 }
 
+
 /*style the validation dot*/
+
 .validation-dot {
+    background-color: #F2617A;
+    border-radius: 20px;
+    height: 10px;
     position: absolute;
     right: 5%;
     top: 10%;
     width: 10px;
-    height: 10px;
-    background-color: #F2617A;
-    border-radius: 20px;
 }
+
 
 /*Change container values for Age Box*/
+
 .ui-input-container-adultcheck {
-    width: 80px;
     font-size: 16px;
+    width: 80px;
 }
 
+
 /*Options for Age Box info span*/
+
 #dot-valid-age {
     padding-top: 25%;
 }
