--- a/demo/stylesheet.css
+++ b/demo/stylesheet.css
@@ -48,6 +48,7 @@
 .ui-input:focus {
     border: 2px solid #51D0EF;
     transition: .8s ease-in;
+    outline: none;
 }
 
 
@@ -69,5 +70,11 @@
 .ui-input-container-adultcheck {
     font-size: 16px;
     width: 80px;
+}
+
+.dot-age-inactive {
+    background-color: lightslategray;
+    opacity: 0.48;
+    border-bottom: 2px solid #212121;
 }
 
