Comple switch to evolution naming standards.

--- a/demo/stylesheet.css
+++ b/demo/stylesheet.css
@@ -22,7 +22,7 @@
 
 /*Descriptions: ex: "Phone Number (US)*/
 
-.ui-input-description {
+.evo-c-dotValidator-label {
     color: #9CABBA;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
@@ -33,7 +33,7 @@
 
 /*Style the input boxes*/
 
-.ui-input {
+.evo-c-dotValidator-input {
     background-color: #ECEFF3;
     border: none;
     color: #212121;
@@ -45,7 +45,7 @@
 
 /*Add focus transition for input boxes*/
 
-.ui-input:focus {
+.evo-c-dotValidator-input:focus {
     border: 2px solid #51D0EF;
     transition: .8s ease-in;
     outline: none;
@@ -54,7 +54,7 @@
 
 /*style the validation dot*/
 
-.validation-dot {
+.evo-c-validation-dot {
     background-color: #F2617A;
     border-radius: 20px;
     height: 6px;
@@ -72,7 +72,7 @@
     width: 80px;
 }
 
-.dot-age-inactive {
+.evo-c-dotValidator-age-inactive {
     background-color: lightslategray;
     opacity: 0.48;
     border-bottom: 2px solid #212121;
