--- a/demo/stylesheet.css
+++ b/demo/stylesheet.css
@@ -1,4 +1,4 @@
-*[class^=”evo-c-dotValidator”] {
+*[class^=”eureka-c-dotValidator”] {
     box-sizing: border-box;
 }
 
@@ -8,7 +8,7 @@
 
 /*Input Container*/
 
-.evo-c-dotValidator-container {
+.eureka-c-dotValidator-container {
     background-color: #ECEFF3;
     display: flex;
     flex-flow: row nowrap;
@@ -20,7 +20,7 @@
 
 /*Descriptions: ex: "Phone Number (US)*/
 
-.evo-c-dotValidator-label {
+.eureka-c-dotValidator-label {
     color: #9CABBA;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
@@ -31,7 +31,7 @@
 
 /*Style the input boxes*/
 
-.evo-c-dotValidator-input {
+.eureka-c-dotValidator-input {
     background-color: #ECEFF3;
     border: none;
     color: #212121;
@@ -43,7 +43,7 @@
 
 /*Add focus transition for input boxes*/
 
-.evo-c-dotValidator-input:focus {
+.eureka-c-dotValidator-input:focus {
     border: 2px solid #51D0EF;
     transition: .8s ease-in;
     outline: none;
@@ -52,7 +52,7 @@
 
 /*style the validation dot*/
 
-.evo-c-validation-dot {
+.eureka-c-validation-dot {
     background-color: #F2617A;
     border-radius: 20px;
     height: 6px;
@@ -65,12 +65,12 @@
 
 /*Change container values for Age Box*/
 
-.evo-c-dotValidator-container-age {
+.eureka-c-dotValidator-container-age {
     font-size: 16px;
     width: 80px;
 }
 
-.evo-c-dotValidator-age-inactive {
+.eureka-c-dotValidator-age-inactive {
     background-color: lightslategray;
     opacity: 0.48;
     border-bottom: 2px solid #212121;
